# databaseS2

./: .env  Cargo.toml  README.md  dfd.drawio  physical.drawio  sqlite.db  sqlite.db-shm  sqlite.db-wal
.sqlx/: query-a82ca270c4a6ea260ded609bc3fab4990db00ef42093fa06a6207489e674d704.json
data/: data.csv
sql/: create_tables.sql  create_tables_1.sql  create_tables_2.sql  create_views.sql  dh_country.sql  dh_county.sql  dh_region.sql  fetch.sql  fptp.sql  hybrid.sql  lr.sql  lr_country.sql  lr_county.sql  lr_region.sql  pr.sql  pr_country.sql  pr_county.sql  pr_region.sql  pr_th.sql
src/: calculate.rs  insert_data.rs  main.rs  utils.rs
static/: style.css
