[package]
name = "databaseS2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
csv = "1.3.1"
maud = { version = "0.27.0", features = ["axum"] }
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"]}
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
